--- a/initial-project/pom.xml
+++ b/initial-project/pom.xml
@@ -26,6 +26,10 @@
 		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
 		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
 		<mule.maven.plugin.version>3.4.2</mule.maven.plugin.version>
+
+		<ch.workers>1</ch.workers>
+		<ch.workerType>MICRO</ch.workerType>
+				
 	</properties>
 
 	<build>
